# picasa2xmp

./: LICENSE  README.md  picasa2xmp.cabal  stack.yaml
app/: Main.hs
