name:                picasa2xmp
version:             0.1.0.0
synopsis:            Write Picasa information to XMP
description:         Please see README.md
homepage:            http://github.com/githubuser/picasa2xmp#readme
license:             BSD3
license-file:        LICENSE
author:              Badi' Abdul-Wahid
maintainer:          abdulwahidc@gmail.com
copyright:           2010 Badi' Abdul-Wahid
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable picasa2xmp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , picasa2xmp
                     , ini
                     , unordered-containers
                     , shelly
                     , directory
                     , filepath
                     , process
                     , async
                     , bifunctors
                     , pipes
                     , pipes-safe
                     , pipes-files
                     , text
  default-language:    Haskell2010

test-suite picasa2xmp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , picasa2xmp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/picasa2xmp
